# Niftyflow

./: .gitignore  LICENSE  README.md  parse.py  reader.cpp  开题报告.md
analyzer/: .gitignore  CMakeLists.txt  README.md  _gvimrc  main.cpp
analyzer/cmake/: Finddpdk.cmake
analyzer/common/: CMakeLists.txt  atom_counter.h  cnt_rule.h  common.cpp  con_queue.h  conf.h  gre.h  ip.h  lock.h  log.h  message.h  packet.h  trace.h
analyzer/conf/: CMakeLists.txt  conf-example.json  conf.json
analyzer/input/: CMakeLists.txt  dpdk_adapter.cpp  dpdk_adapter.h  pcap_adapter.cpp  pcap_adapter.h  reader.cpp  reader.h
analyzer/libs/: CMakeLists.txt
analyzer/libs/cJSON/: CMakeLists.txt
analyzer/output/: CMakeLists.txt  trans.cpp  trans.h
analyzer/process/: CMakeLists.txt  ever_main.cpp  ever_main.h  on_process.cpp  on_process.h  watcher.cpp  watcher.h
analyzer/proto/: CMakeLists.txt  message.proto
analyzer/test/: CMakeLists.txt  ConfTest.cpp  DPDKTest.cpp  ExampleTest.cpp  LoggerTest.cpp  MySQLTest.cpp  PcapTest.cpp  ProtobufTest.cpp  RedisTest.cpp  main.cpp  test.cpp
controler/: README.md  apidoc.json  conn.py  main.py  q_listen.py  requirement.txt  server.conf  settings.py
controler/handlers/: base_handler.py  counter_filter_handler.py  probe_construct_handler.py  rules_handler.py  test_handler.py  trace_filter_handler.py
controler/util/: packet_util.py  time_util.py
controller/: .gitignore  README.md  server.conf-example
controller/handlers/: counter_filter_handler.py  test_handler.py
doc/: .gitignore  Analyzer初始化及通信过程.md  flow.xml  seuProposal.bib  tbl_counter.csv  tbl_trace_data.csv  use.bib  开题报告.md  开题报告截稿.md  开题报告截稿.tex  开题报告模板.doc  成果形式.md  毕业设计任务书.doc  毕业设计的实现.md  毕业设计翻译.md  测试环境搭建.md  翻译截稿.md  论文截稿.tex  进度安排.csv
doc/orig_md/: Analyzer初始化及通信过程.md  DPDK使用说明.md  开题报告截稿.md  数据库问题相关.md  测试环境搭建.md  热重启与容灾.md  翻译截稿.md  论文截稿.md  论文截稿.tex  进度安排.csv
frontend/: README.md  package-lock.json  package.json  webpack.config.dev.js  webpack.config.prod.js
frontend/src/: conf.js  index.html  index.js  main.js
frontend/src/module/: counter_data.js  performance.js  process_data.js  queue_data.js  trace_data.js
